feat: fixed postmapping for Habits